--- a/public/about/style.css
+++ b/public/about/style.css
@@ -1,7 +1,36 @@
+#sidebar {
+  position: fixed; /* Sit on top of the page content */
+  width: 300px;
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: rgba(0,0,0); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  transform: translateX(100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1), opacity 0.3s, visibility 0s 0.3s;
+  
+}
+#sidebar.open {
+  transform: translateX(0px);
+  opacity: 1;
+  visibility: visible;
+  transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1), opacity 0.3s, visibility 0s;
+}
 
-
-@media screen and (max-width: 620px)  {
+@media screen and (max-width: 540px)  {
   .logo {
-    display: none;
+    width: 70px;
+    height: auto
   }
+}
+
+* {
+  z-index: 1
+}
+
+.sidebar.a {
+  color: white
 }
