--- a/public/main.css
+++ b/public/main.css
@@ -4,7 +4,7 @@
   --text-color: #0c0c0c;
   --primary-color: #3bcf44;
   --link-color: #009bd6;
-  --footer-color: #74663b
+  --footer-color: #DDF9EC;
 }
 
 html {
@@ -20,6 +20,7 @@ body {
   accent-color: var(--primary-color);
   color-scheme: light;
   margin: 0px;
+  overscroll-behavior-y: none;
   
   display:flex;
   flex-direction: column;
@@ -27,6 +28,11 @@ body {
 
 * {
   text-size-adjust: auto;
+}
+
+.logo {
+  margin: 0;
+  padding: 0
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -51,13 +57,14 @@ header {
   flex-direction: row;
   align-items: center;
   flex-wrap: nowrap;
-  justify-content: center;
+  justify-content: space-between;
 }
 footer { 
   padding: 36px 12px;
-  background-color: var(--footer-color);
+  background-color: white;
   text-align: center;
-  font-size: 32px;
+  font-size: 30px;
+  color: #2B9432;
 }
 header h1 {
   margin: 0px;
@@ -82,6 +89,7 @@ main {
   max-width: 800px;
   margin: 24px auto;
   padding: 24px;
+  width: -webkit-fill-available;
 }
 
 .card {
@@ -97,8 +105,8 @@ main {
 }
 
 .logo {
-  position: absolute;
-  left: 24px;
+  /** position: absolute;
+  left: 24px; **/
   width: 100px;
   height: 100px;
 }
@@ -132,4 +140,12 @@ a:hover {
 .hidden {
 	visibility: hidden !important;
 	display: none !important;
+}
+
+.main-container {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  height: 100%
 }
