--- a/public/volunteer/style.css
+++ b/public/volunteer/style.css
@@ -3,6 +3,13 @@ table {
   width: auto;
   height: auto;
 }
+header {
+  background-image: url(https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/image.png?v=1689702452759);
+}
+.header-link {
+  font-size: 24px;
+  font-weight: bold;
+}
 td {
   padding: 4px 16px;
   border-bottom: 2px solid var(--container-color);
@@ -69,29 +76,44 @@ h1 {
   padding-bottom: 0;
 }
 
-main {
-  margin-top: 0 !important;
-}
-
-.sidebar {
+#sidebar {
   position: fixed; /* Sit on top of the page content */
-  display: block; /* Hidden by default */
   width: 300px;
   height: 100%; /* Full height (cover the whole page) */
   top: 0px;
   right: 0px;
   bottom: 0px;
-  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+  background-color: rgba(0,0,0); /* Black background with opacity */
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: pointer; /* Add a pointer on hover */
-}
-.sidebar.open {
+  transform: translateX(100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1), opacity 0.3s, visibility 0s 0.3s;
   
+}
+#sidebar.open {
+  transform: translateX(0px);
+  opacity: 1;
+  visibility: visible;
+  transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1), opacity 0.3s, visibility 0s;
+}
+
+.main-container {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  height: 100%
+}
+
+main {
+  margin: 0 !important
 }
 
 @media screen and (max-width: 540px)  {
   .logo {
-    display: none;
+    width: 70px;
+    height: auto
   }
 }
 
@@ -104,6 +126,9 @@ main {
   z-index: 1
 }
 
+.sidebar.a {
+  color: white
+}
 
 
 
