--- a/public/food-banks/style.css
+++ b/public/food-banks/style.css
@@ -5,6 +5,7 @@ a {
   text-decoration: underline;
 }
 
+
 .info-list > li {
   margin-bottom: 2em;
 }
@@ -16,19 +17,100 @@ a {
   }
 }
 header{
-  font-size: 15px;
+  background-image: url("https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/output-onlinepngtools.png?v=1690221057328");
+  background-size: cover;
+  max-width: auto;
+  max-height: auto;
 }
-h1{
-  color: black;
+.header-link {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+
+h1 {
   text-decoration:none;
 }
-footer { 
-  padding: 36px 12px;
-  background-color: #7bb649;
-  
-  font-size: 15px;
-  color: #2B9432;
+
+.main-container {
+  flex-direction: column;
 }
-footer p{
-  text-align: bottom;
+#track-me {
+  background-color: var(--link-color);
+  border: 0px;
+  color: white;
+  padding: 12px 32px;
+  width: min-content;
+  text-wrap: nowrap;
+}
+#track-me:hover {
+  filter: saturate(1.5);
+}
+#track-me:active {
+  filter: saturate(0.5);
+}
+
+table {
+  border-spacing: 0px;
+  width: auto;
+  height: auto;
+}
+
+td {
+  padding: 4px 16px;
+  border-bottom: 2px solid var(--container-color);
+  border-right: 2px solid var(--container-color);
+  max-width: auto;
+  max-height: auto;
+}
+td:first-child {
+  border-left: 2px solid var(--container-color);
+  max-width: auto;
+  max-height: auto;
+}
+
+th {
+  background-color: var(--container-color);
+  font-size: 1.2em;
+  padding: 12px 24px;
+  max-width: auto;
+  max-height: auto;
+}
+
+.visit-button {
+  border: 0px;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+  background-color: var(--link-color);
+  cursor: pointer;
+  color: white;
+  text-decoration: underline;
+}
+.visit-button:hover {
+  filter: saturate(1.5);
+}
+.visit-button:active {
+  filter: saturate(0.5);
+}
+td:last-child {
+  height: 0px;
+  padding: 0px;
+}
+
+.tablelegend {
+  color: gray;
+  display: none
+}
+
+#volunteerTable {
+  background: white;
+  max-width: auto;
+  max-height: auto;
+}
+
+@media screen and (max-width: 480px) {
+  table {
+    width: 20px !important
+  }
 }
