--- a/public/index.css
+++ b/public/index.css
@@ -13,44 +13,10 @@
   z-index: 100;
 }
 
-.card {
-  color: var(--text-color);
-  text-align: center;
-}
-
 #shadowBox {
     background-color: rgb(0, 0, 0);
-    /* Fallback color */
     background-color: rgba(0, 0, 0, 0.2);
-    /* Black w/opacity/see-through */
     border: 3px solid;
-}
-
-.rainbow_text_animated.wes {
-    background: linear-gradient(to right, #e349ff, #6200ff , #ff3399, #0000ff, #e349ff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: rainbow_animation 6s ease-in-out infinite;
-    background-size: 400% 100%;
-}
-.rainbow_text_animated.andrew {
-    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: rainbow_animation 6s ease-in-out infinite;
-    background-size: 400% 100%;
-}
-
-@keyframes rainbow_animation {
-    0%, 100% {
-        background-position: 0 0;
-    }
-
-    50% {
-        background-position: 100% 0;
-    }
 }
 
 @media screen and (max-width: 648px)  {
@@ -59,4 +25,13 @@
   }
 }
 
-
+body {
+  background-size:cover;
+  background-attachment:fixed;
+  background: 
+        linear-gradient(
+          rgba(0, 0, 0, 0.7), 
+          rgba(0, 0, 0, 0.7)
+        ),
+        url(https://cdn.glitch.global/6c5d39b3-7b99-4e89-a909-735fd19882fc/city-cityscape-sky-photography-skyline-skyscraper-4333-wallhere.com.jpg?v=1689788482191);
+}
